# aissistant

./: .gitignore  Dockerfile  README.md  pyproject.toml
locales/: README.md
locales/en_US/LC_MESSAGES/: messages.po
locales/ru_RU/LC_MESSAGES/: messages.po
resources/: translation.csv
src/: demo.py  examples.py  settings.py  stt.py  translator.py  tts.py  tts_examples.py  utils.py
src/audio/: __init__.py  common.py  examples.py  player.py  recorder.py
